# astro-research-assistant

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: astro-research-assistant.mdc
agents/: __init__.py  paper_analyzer.py  report_compiler.py  research_strategist.py  skeptical_referee.py  synthesis_agent.py  topic_expander.py
app/: cli.py  config.py
config/: astro_ontology.yaml
crews/: research_crew.py
evals/: fixture_papers_dark_energy.json  fixture_papers_jwst_highz.json  fixture_papers_s8.json
ontology/: cosmology_topics.yaml  observables.yaml  parameters.yaml  surveys_and_missions.yaml  systematics.yaml
prompts/: hypothesis_generation.md  paper_analysis.md  report_compilation.md  skeptical_review.md  synthesis.md  topic_expansion.md
schemas/: __init__.py  hypothesis.py  paper.py  paper_analysis.py  report.py  synthesis.py  topic_expansion.py  topic_profile.py
scripts/: test_retrieval_tools.py  test_wiki_tool.py
storage/wiki/: index.md  log.md
storage/wiki/concepts/: cmb-lensing.md  cosmic-shear.md  lcdm.md  s8.md  (+4 more)
tests/: test_cli_pipeline_helpers.py  test_metadata_resolver.py  test_ml_usage_signals.py  test_paper_role_classifier.py  test_pdf_tool.py  test_ranking_tool.py  test_retrieval_tools.py  test_topic_profiler.py  test_wiki_tool.py
tools/: ads_tool.py  arxiv_tool.py  metadata_resolver.py  ml_usage_signals.py  ontology_loader.py  openalex_tool.py  paper_role_classifier.py  pdf_tool.py  query_generator.py  ranking_tool.py  semantic_scholar_tool.py  topic_expansion_tool.py  topic_profiler.py  web_search_tool.py  wiki_tool.py
(+18 files in other folders)
