[project]
name = "astro-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=3.0.0",
    "chromadb>=1.1.1",
    "crewai>=1.14.4",
    "crewai-tools>=1.14.4",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "openai>=2.35.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
    "rich>=14.3.4",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "typer>=0.23.1",
]
